[package]
name = "sublate"
version = "0.1.0"
authors = ["Martin Disch <martindisch@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
eyre = "0.6.5"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.127", features = ["derive"] }
itertools = "0.10.1"
html-escape = "0.2.9"
regex = "1.7.3"
